feat: dropdown menu and  http fetch, etc...

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,15 @@ dependencies:
   google_fonts:
   provider: 6.1.5
   flutter_colorpicker: ^1.1.0
+  json_annotation:
+  crypto: ^3.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-
+  build_runner: #dart run build_runner build
+  json_serializable:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
