--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   flutter_colorpicker: ^1.1.0
   json_annotation:
   crypto: ^3.0.6
+  another_transformer_page_view: ^2.0.0
+  vector_math: ^2.1.2
 
 dev_dependencies:
   flutter_test:
